--- a/src/Components/BtnNavidad/BtnNavidad.css
+++ b/src/Components/BtnNavidad/BtnNavidad.css
@@ -2,7 +2,7 @@
 .btnNav{
     height: 30px;
     color: black; 
-    margin-top: 12rem;
+    /* margin-top: 12rem; */
 }
 .infoNavi{
     display: flex;
