--- a/src/Components/BtnNavidad/BtnNavidad.css
+++ b/src/Components/BtnNavidad/BtnNavidad.css
@@ -6,7 +6,7 @@
 }
 .infoNavi{
     display: flex;
-    background-color: white;
+  background-image: url(../assets//bgNav.png);
     font-weight: 500;
     border-bottom:whitesmoke 2px solid;
     justify-content: center;
