gap landing start

--- a/src/Components/LandingStart/LandingStart.css
+++ b/src/Components/LandingStart/LandingStart.css
@@ -13,7 +13,8 @@
   max-width: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  /* justify-content: space-between; */
+  gap: 5rem;
 }
 
 .contAlerStart{
